--- a/BWD.Web/Pages/Shared/_Layout.cshtml
+++ b/BWD.Web/Pages/Shared/_Layout.cshtml
@@ -221,6 +221,7 @@
                             </div>
                         </div>
                     </form>
+                    <partial name="_LoginPartial" />
 
                     <!-- Topbar Navbar -->
                     <ul class="navbar-nav ml-auto">
