--- a/BWD.Web/Pages/Shared/_Layout.cshtml
+++ b/BWD.Web/Pages/Shared/_Layout.cshtml
@@ -405,6 +405,9 @@
                                     <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
                                     Logout
                                 </a>
+                                @*<form id="logoutForm" class="dropdown-item" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/Index", new { area = "" })">
+                                    <button id="logout" type="submit" class="nav-link btn btn-link text-dark">Logout</button>
+                                </form>*@
                             </div>
                         </li>
 
@@ -432,7 +435,7 @@
             <footer class="sticky-footer bg-white">
                 <div class="container my-auto">
                     <div class="copyright text-center my-auto">
-                        <span>Copyright &copy; Your Website 2021</span>
+                        <span>Copyright &copy; Your Website @DateTime.Now.Year</span>
                     </div>
                 </div>
             </footer>
